[package]
name = "missile-command"
version = "0.1.0"
authors = ["mthom26 <mthom2626@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", default-features = true, features = ["serialize"] }
rand = "0.8.3"
ron = "0.6.4"
serde = "1.0.125"
bevy_kira_audio = { version = "0.4.0", features = ["wav"] }
